# aoc2023

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
10a/src/: main.rs
10b/: Cargo.toml
10b/src/: main.rs
11a/: Cargo.toml
11a/src/: main.rs
11b/: Cargo.toml
11b/src/: main.rs
12a/: Cargo.toml
12a/src/: main.rs
1a/: main.cpp
1b/: main.cpp
2a/: main.cpp
2b/: main.cpp
3a/: main.cpp
3b/: main.cpp
4a/: main.cpp
4b/: main.cpp
5a/: main.cpp
5b/: main.cpp
6a/: main.cpp
6b/: main.cpp
7a/: Cargo.toml
7a/src/: main.rs
7b/: Cargo.toml
7b/src/: main.rs
8a/: Cargo.toml
8a/src/: main.rs
8b/: Cargo.toml
8b/src/: main.rs
9a/: Cargo.toml
9a/src/: main.rs
9b/: Cargo.toml
9b/benches/: benchmark.rs
9b/src/: lib.rs  main.rs
